Errorprone: fix some Java 17 warnings
.. after the merge of #11885